# Streamlit-for-Web-Development-2nd-ed

./: LICENSE.txt  README.md
Chapter_1/: main.py  text_display.py  unit_test.py
Chapter_10/: How to initialize and use Cookie Manager.py  RatingStar.tsx  Updated Package.json  __init__.py  main.py  pyproject.toml  setup.py
Chapter_10/bouncing_image/: __init__.py
Chapter_10/bouncing_image/frontend/src/: BouncingImage.jsx
Chapter_10/cookie_manager/: __init__.py
Chapter_10/cookie_manager/frontend/src/: CookieManager.jsx
Chapter_10/stars_demo/rating_stars/frontend/src/: CleanedTemplate.tsx
Chapter_10/stepper_bar/: __init__.py
Chapter_10/stepper_bar/frontend/src/: StepperBar.jsx
Chapter_10/tab_bar/: __init__.py
Chapter_10/tab_bar/frontend/src/: TabBar.jsx
Chapter_11/: Arduino_motor_control.ino  Arduino_temperature_data_recorder.ino  Streamlit-Authenticator.py  Utils.py  config 11-14.yaml  config.py  config.yaml  datetime_filter.py  lr.py  main.py  motor_control_app.py  temperature_data_recorder_app.py  timeseries_heatmap.py  timeseries_synchronization.py  warehouse_app.py  warehouse_utils.py
Chapter_12/: main.py  test.yaml  utility.py
Chapter_2/: conditional_flow_1.py  conditional_flow_2.py  dataframe_demo.py  input_form.py  interactive_line_chart.py  interactive_map.py  mutate_dataframe_arrange.py  mutate_dataframe_filter.py  mutate_dataframe_groupby.py  mutate_dataframe_lambda.py  mutate_dataframe_merge.py  mutate_dataframe_select.py  static_bar_chart.py  static_line_chart.py  try_and_except_1.py  try_and_except_2.py  without_try_and_except.py
(+81 files in other folders)
