[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "rating_stars"
version = "0.1"
authors = [{name = "YOUR-NAME", email = "YOU-EMAIL@DOMAIN.com"}]
description = "INSERT-DESCRIPTION-HERE"
requires-python = ">=3.6"
dependencies = [
    "streamlit>=0.86",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Python", "Streamlit", "React", "JavaScript", "Custom"]
